添加历史记录和定时下载
引入了历史对话和管理器，使用 JSON 格式存储下载历史，以替代之前的 SQLite 实现方案。新增了定时下载对话框、定时下载管理器，并将其与主窗口集成，功能涵盖用户界面操作及系统通知。优化了下载任务中的错误处理机制与日志配置。更新了主窗口及用户界面，以支持新功能和菜单项。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
-find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Network Sql Gui Concurrent)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Network Gui Concurrent)
 if(TARGET Qt6::Concurrent)
     message(STATUS "找到Qt6 Concurrent模块")
 else()
@@ -42,6 +42,14 @@ qt_add_executable(Downloader
     settingsdialog.cpp
     settingsdialog.h
     settingsdialog.ui
+    scheduledialog.cpp
+    scheduledialog.h
+    scheduledialog.ui
+    schedulemanager.cpp
+    schedulemanager.h
+    historydialog.cpp
+    historydialog.h
+    historydialog.ui
     icon.qrc
 )
 target_link_libraries(Downloader
@@ -49,7 +57,6 @@ target_link_libraries(Downloader
         Qt6::Core
         Qt6::Widgets
         Qt6::Network
-        Qt6::Sql
         Qt6::Gui
         Qt6::Concurrent
 )
